Bug 150325 - Newly created animated gif is not saved
Summary: Newly created animated gif is not saved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-09 22:03 UTC by Regina Henschel
Modified: 2022-08-12 17:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Source for generating an animated gif (19.23 KB, application/vnd.oasis.opendocument.presentation)
2022-08-09 22:03 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2022-08-09 22:03:04 UTC
Created attachment 181671 [details]
Source for generating an animated gif

1. Open attached file. It contains a group of shapes. Select the group.
2. Menu Insert > Media > Animated Image. This opens the "Animation" window.
3. In the "Animation" window select "Bitmap object" option.
4. In the "Image" section click on the right icon, that is the icon with tooltip "Apply Objects Individually".
5. Without any other changes click on "Create" button.
6. Close "Animation" window.
7. The animation is inserted. It should be selected and plays. Move it with Shift+Right arrow a little bit to the right so that it does not overlap with the group.
8. It should be still selected. Menu Format -> Name. Enter a name.
9. Start presentation mode and make sure, that the animation plays.
So this is indeed a functional animated gif.

10. No save the file with a new name and reopen it. Again start presentation mode. You should see an animation.

Error: The image is missing.

That works as described in Version: 5.4.7.2 (x64)
Build ID: c838ef25c16710f8838b1faec480ebba495259d0
CPU threads: 8; OS: Windows 6.19; UI render: default; 
Locale: de-DE (en_US); Calc: CL

But it is broken in Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5df1bb4b1b222be00d25097660c4ee33542896ea
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL

With current version the saved file has no image at all. The Picture sub-folder is missing. Such you see a "missing image" frame when reopening the saved file.
Comment 1 raal 2022-08-10 15:41:32 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 3ccbfaaf95005a34ca64ad250463ef5ce8842f43
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Works in Version: 5.2.0.0.alpha1+
Comment 2 raal 2022-08-10 19:49:49 UTC
bisected to  cf438d4e37ed301c7045dd3a316f93814909ceeb is the first bad commit
commit cf438d4e37ed301c7045dd3a316f93814909ceeb
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jun 21 00:16:59 2018 -0700

    source 6621c3c67f001c8b8798ae94bb5d84f483617cf4

https://gerrit.libreoffice.org/c/core/+/56198
Comment 3 Commit Notification 2022-08-12 17:53:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fd26ff2418a8c2abc71c9155f458ff798a580bea

tdf#150325 Newly created animated gif is not saved

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.