tdf#150325 Newly created animated gif is not saved

regression from
    commit 6621c3c67f001c8b8798ae94bb5d84f483617cf4
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Jun 20 16:51:48 2018 +0200
    loplugin:useuniqueptr in AnimationWindow

Change-Id: I995a278aff3945070af45b01f1e63b253cceb24c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138202
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>